test/e2e/chainsaw/advanced-header-based-grpcroute/resources/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: grpcroute-header-advanced-rollout
  namespace: default
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: argo-rollouts-canary-service
      stableService: argo-rollouts-stable-service
      trafficRouting:
        managedRoutes:
          - name: canary-route1
          - name: canary-route2
        plugins:
          argoproj-labs/gatewayAPI:
            grpcRoutes:
              - name: grpcroute-header-advanced
                useHeaderRoutes: true
            namespace: default
      steps:
        - setWeight: 30
        - setHeaderRoute:
            name: canary-route1
            match:
              - headerName: X-Test
                headerValue:
                  exact: test
        - pause: {duration: 30s}
        - setWeight: 60
        - setHeaderRoute:
            name: canary-route2
            match:
              - headerName: X-Version
                headerValue:
                  exact: v2
        - pause: {duration: 30s}
        - setWeight: 90
        - pause: {duration: 30s}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:red
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
